--- a/ballots/ballots/plcs_bp1/build.xml
+++ b/ballots/ballots/plcs_bp1/build.xml
@@ -17,39 +17,39 @@
       <property name="BALLOTDIR" value="ballots/ballots/plcs_bp1"/>
       <property name="BALLOTMENU" value="./ballots/ballots/plcs_bp1/menubar_ballot.xml"/>
       <property name="ARCHIVE" value="plcs_bp1-${DSTAMP}"/>
-      <property name="EXPRESS" value="data/modules/class/*.exp,data/modules/external_class/*.exp"/>
+      <property name="EXPRESS" value="data/modules/attribute_classification/*.exp,data/modules/class/*.exp,data/modules/classification/*.exp,data/modules/external_class/*.exp,data/modules/plib_class_reference/*.exp,data/modules/set_theory/*.exp"/>
         
-      <property name="GIFS" value="data/modules/class/*.exp,data/modules/external_class/*.exp,data/modules/class/*.jpg,data/modules/external_class/*.jpg"/>
-      <property name="CONTENTSXML" value="data/modules/class/contents.xml,data/modules/external_class/contents.xml"/>
-      <property name="MODULES" value="data/modules/class/**/*.xml,data/modules/external_class/**/*.xml"/>
-      <property name="SCOPEXML" value="data/modules/class/sys/1_scope.xml,data/modules/external_class/sys/1_scope.xml"/>
-      <property name="REFSXML" value="data/modules/class/sys/2_refs.xml,data/modules/external_class/sys/2_refs.xml"/>
-      <property name="DEFSXML" value="data/modules/class/sys/3_defs.xml,data/modules/external_class/sys/3_defs.xml"/>
-      <property name="INFOREQSXML" value="data/modules/class/sys/4_info_reqs.xml,data/modules/external_class/sys/4_info_reqs.xml"/>
-      <property name="MAINXML" value="data/modules/class/sys/5_main.xml,data/modules/external_class/sys/5_main.xml"/>
-      <property name="MAPPINGXML" value="data/modules/class/sys/5_mapping.xml,data/modules/external_class/sys/5_mapping.xml"/>
-      <property name="" value="data/modules/class,data/modules/external_class"/>
-      <property name="MIMXML" value="data/modules/class/sys/5_mim.xml,data/modules/external_class/sys/5_mim.xml"/>
-      <property name="ASHORTNAMESXML" value="data/modules/class/sys/a_short_names.xml,data/modules/external_class/sys/a_short_names.xml"/>
-      <property name="BOBJREGXML" value="data/modules/class/sys/b_obj_reg.xml,data/modules/external_class/sys/b_obj_reg.xml"/>
-      <property name="BIBLIOXML" value="data/modules/class/sys/biblio.xml,data/modules/external_class/sys/biblio.xml"/>
-      <property name="CARMEXPGXML" value="data/modules/class/sys/c_arm_expg.xml,data/modules/external_class/sys/c_arm_expg.xml"/>
-      <property name="COVERXML" value="data/modules/class/sys/cover.xml,data/modules/external_class/sys/cover.xml"/>
-      <property name="DMIMEXPGXML" value="data/modules/class/sys/d_mim_expg.xml,data/modules/external_class/sys/d_mim_expg.xml"/>
-      <property name="EEXPXML" value="data/modules/class/sys/e_exp.xml,data/modules/external_class/sys/e_exp.xml"/>
-      <property name="EEXPARMXML" value="data/modules/class/sys/e_exp_arm.xml,data/modules/external_class/sys/e_exp_arm.xml"/>
-      <property name="EEXPMIMXML" value="data/modules/class/sys/e_exp_mim.xml,data/modules/external_class/sys/e_exp_mim.xml"/>
-      <property name="EEXPMIMLFXML" value="data/modules/class/sys/e_exp_mim_lf.xml,data/modules/external_class/sys/e_exp_mim_lf.xml"/>
-      <property name="FGUIDEXML" value="data/modules/class/sys/f_guide.xml,data/modules/external_class/sys/f_guide.xml"/>
-      <property name="FOREWORDXML" value="data/modules/class/sys/foreword.xml,data/modules/external_class/sys/foreword.xml"/>
-      <property name="INTRODUCTIONXML" value="data/modules/class/sys/introduction.xml,data/modules/external_class/sys/introduction.xml"/>
-      <property name="ARMDESCRIPTIONSXML" value="data/modules/class/arm_descriptions.xml,data/modules/external_class/arm_descriptions.xml"/>
-      <property name="MIMDESCRIPTIONSXML" value="data/modules/class/mim_descriptions.xml,data/modules/external_class/mim_descriptions.xml"/>
-      <property name="ARMEXPGXML" value="data/modules/class/armexpg*.xml,data/modules/external_class/armexpg*.xml"/>
-      <property name="MIMEXPGXML" value="data/modules/class/mimexpg*.xml,data/modules/external_class/mimexpg*.xml"/>
-      <property name="ARMEXPXML" value="data/modules/class/arm.xml,data/modules/external_class/arm.xml"/>
-      <property name="MIMEXPXML" value="data/modules/class/mim.xml,data/modules/external_class/mim.xml"/>
-      <property name="RESOURCESXML" value="data/resources/group_schema/group_schema.xml,data/resources/classification_schema/classification_schema.xml,data/resources/external_reference_schema/external_reference_schema.xml"/>
+      <property name="GIFS" value="data/modules/attribute_classification/*.exp,data/modules/class/*.exp,data/modules/classification/*.exp,data/modules/external_class/*.exp,data/modules/plib_class_reference/*.exp,data/modules/set_theory/*.exp,data/modules/attribute_classification/*.jpg,data/modules/class/*.jpg,data/modules/classification/*.jpg,data/modules/external_class/*.jpg,data/modules/plib_class_reference/*.jpg,data/modules/set_theory/*.jpg"/>
+      <property name="CONTENTSXML" value="data/modules/attribute_classification/contents.xml,data/modules/class/contents.xml,data/modules/classification/contents.xml,data/modules/external_class/contents.xml,data/modules/plib_class_reference/contents.xml,data/modules/set_theory/contents.xml"/>
+      <property name="MODULES" value="data/modules/attribute_classification/**/*.xml,data/modules/class/**/*.xml,data/modules/classification/**/*.xml,data/modules/external_class/**/*.xml,data/modules/plib_class_reference/**/*.xml,data/modules/set_theory/**/*.xml"/>
+      <property name="SCOPEXML" value="data/modules/attribute_classification/sys/1_scope.xml,data/modules/class/sys/1_scope.xml,data/modules/classification/sys/1_scope.xml,data/modules/external_class/sys/1_scope.xml,data/modules/plib_class_reference/sys/1_scope.xml,data/modules/set_theory/sys/1_scope.xml"/>
+      <property name="REFSXML" value="data/modules/attribute_classification/sys/2_refs.xml,data/modules/class/sys/2_refs.xml,data/modules/classification/sys/2_refs.xml,data/modules/external_class/sys/2_refs.xml,data/modules/plib_class_reference/sys/2_refs.xml,data/modules/set_theory/sys/2_refs.xml"/>
+      <property name="DEFSXML" value="data/modules/attribute_classification/sys/3_defs.xml,data/modules/class/sys/3_defs.xml,data/modules/classification/sys/3_defs.xml,data/modules/external_class/sys/3_defs.xml,data/modules/plib_class_reference/sys/3_defs.xml,data/modules/set_theory/sys/3_defs.xml"/>
+      <property name="INFOREQSXML" value="data/modules/attribute_classification/sys/4_info_reqs.xml,data/modules/class/sys/4_info_reqs.xml,data/modules/classification/sys/4_info_reqs.xml,data/modules/external_class/sys/4_info_reqs.xml,data/modules/plib_class_reference/sys/4_info_reqs.xml,data/modules/set_theory/sys/4_info_reqs.xml"/>
+      <property name="MAINXML" value="data/modules/attribute_classification/sys/5_main.xml,data/modules/class/sys/5_main.xml,data/modules/classification/sys/5_main.xml,data/modules/external_class/sys/5_main.xml,data/modules/plib_class_reference/sys/5_main.xml,data/modules/set_theory/sys/5_main.xml"/>
+      <property name="MAPPINGXML" value="data/modules/attribute_classification/sys/5_mapping.xml,data/modules/class/sys/5_mapping.xml,data/modules/classification/sys/5_mapping.xml,data/modules/external_class/sys/5_mapping.xml,data/modules/plib_class_reference/sys/5_mapping.xml,data/modules/set_theory/sys/5_mapping.xml"/>
+      <property name="" value="data/modules/attribute_classification,data/modules/class,data/modules/classification,data/modules/external_class,data/modules/plib_class_reference,data/modules/set_theory"/>
+      <property name="MIMXML" value="data/modules/attribute_classification/sys/5_mim.xml,data/modules/class/sys/5_mim.xml,data/modules/classification/sys/5_mim.xml,data/modules/external_class/sys/5_mim.xml,data/modules/plib_class_reference/sys/5_mim.xml,data/modules/set_theory/sys/5_mim.xml"/>
+      <property name="ASHORTNAMESXML" value="data/modules/attribute_classification/sys/a_short_names.xml,data/modules/class/sys/a_short_names.xml,data/modules/classification/sys/a_short_names.xml,data/modules/external_class/sys/a_short_names.xml,data/modules/plib_class_reference/sys/a_short_names.xml,data/modules/set_theory/sys/a_short_names.xml"/>
+      <property name="BOBJREGXML" value="data/modules/attribute_classification/sys/b_obj_reg.xml,data/modules/class/sys/b_obj_reg.xml,data/modules/classification/sys/b_obj_reg.xml,data/modules/external_class/sys/b_obj_reg.xml,data/modules/plib_class_reference/sys/b_obj_reg.xml,data/modules/set_theory/sys/b_obj_reg.xml"/>
+      <property name="BIBLIOXML" value="data/modules/attribute_classification/sys/biblio.xml,data/modules/class/sys/biblio.xml,data/modules/classification/sys/biblio.xml,data/modules/external_class/sys/biblio.xml,data/modules/plib_class_reference/sys/biblio.xml,data/modules/set_theory/sys/biblio.xml"/>
+      <property name="CARMEXPGXML" value="data/modules/attribute_classification/sys/c_arm_expg.xml,data/modules/class/sys/c_arm_expg.xml,data/modules/classification/sys/c_arm_expg.xml,data/modules/external_class/sys/c_arm_expg.xml,data/modules/plib_class_reference/sys/c_arm_expg.xml,data/modules/set_theory/sys/c_arm_expg.xml"/>
+      <property name="COVERXML" value="data/modules/attribute_classification/sys/cover.xml,data/modules/class/sys/cover.xml,data/modules/classification/sys/cover.xml,data/modules/external_class/sys/cover.xml,data/modules/plib_class_reference/sys/cover.xml,data/modules/set_theory/sys/cover.xml"/>
+      <property name="DMIMEXPGXML" value="data/modules/attribute_classification/sys/d_mim_expg.xml,data/modules/class/sys/d_mim_expg.xml,data/modules/classification/sys/d_mim_expg.xml,data/modules/external_class/sys/d_mim_expg.xml,data/modules/plib_class_reference/sys/d_mim_expg.xml,data/modules/set_theory/sys/d_mim_expg.xml"/>
+      <property name="EEXPXML" value="data/modules/attribute_classification/sys/e_exp.xml,data/modules/class/sys/e_exp.xml,data/modules/classification/sys/e_exp.xml,data/modules/external_class/sys/e_exp.xml,data/modules/plib_class_reference/sys/e_exp.xml,data/modules/set_theory/sys/e_exp.xml"/>
+      <property name="EEXPARMXML" value="data/modules/attribute_classification/sys/e_exp_arm.xml,data/modules/class/sys/e_exp_arm.xml,data/modules/classification/sys/e_exp_arm.xml,data/modules/external_class/sys/e_exp_arm.xml,data/modules/plib_class_reference/sys/e_exp_arm.xml,data/modules/set_theory/sys/e_exp_arm.xml"/>
+      <property name="EEXPMIMXML" value="data/modules/attribute_classification/sys/e_exp_mim.xml,data/modules/class/sys/e_exp_mim.xml,data/modules/classification/sys/e_exp_mim.xml,data/modules/external_class/sys/e_exp_mim.xml,data/modules/plib_class_reference/sys/e_exp_mim.xml,data/modules/set_theory/sys/e_exp_mim.xml"/>
+      <property name="EEXPMIMLFXML" value="data/modules/attribute_classification/sys/e_exp_mim_lf.xml,data/modules/class/sys/e_exp_mim_lf.xml,data/modules/classification/sys/e_exp_mim_lf.xml,data/modules/external_class/sys/e_exp_mim_lf.xml,data/modules/plib_class_reference/sys/e_exp_mim_lf.xml,data/modules/set_theory/sys/e_exp_mim_lf.xml"/>
+      <property name="FGUIDEXML" value="data/modules/attribute_classification/sys/f_guide.xml,data/modules/class/sys/f_guide.xml,data/modules/classification/sys/f_guide.xml,data/modules/external_class/sys/f_guide.xml,data/modules/plib_class_reference/sys/f_guide.xml,data/modules/set_theory/sys/f_guide.xml"/>
+      <property name="FOREWORDXML" value="data/modules/attribute_classification/sys/foreword.xml,data/modules/class/sys/foreword.xml,data/modules/classification/sys/foreword.xml,data/modules/external_class/sys/foreword.xml,data/modules/plib_class_reference/sys/foreword.xml,data/modules/set_theory/sys/foreword.xml"/>
+      <property name="INTRODUCTIONXML" value="data/modules/attribute_classification/sys/introduction.xml,data/modules/class/sys/introduction.xml,data/modules/classification/sys/introduction.xml,data/modules/external_class/sys/introduction.xml,data/modules/plib_class_reference/sys/introduction.xml,data/modules/set_theory/sys/introduction.xml"/>
+      <property name="ARMDESCRIPTIONSXML" value="data/modules/attribute_classification/arm_descriptions.xml,data/modules/class/arm_descriptions.xml,data/modules/classification/arm_descriptions.xml,data/modules/external_class/arm_descriptions.xml,data/modules/plib_class_reference/arm_descriptions.xml,data/modules/set_theory/arm_descriptions.xml"/>
+      <property name="MIMDESCRIPTIONSXML" value="data/modules/attribute_classification/mim_descriptions.xml,data/modules/class/mim_descriptions.xml,data/modules/classification/mim_descriptions.xml,data/modules/external_class/mim_descriptions.xml,data/modules/plib_class_reference/mim_descriptions.xml,data/modules/set_theory/mim_descriptions.xml"/>
+      <property name="ARMEXPGXML" value="data/modules/attribute_classification/armexpg*.xml,data/modules/class/armexpg*.xml,data/modules/classification/armexpg*.xml,data/modules/external_class/armexpg*.xml,data/modules/plib_class_reference/armexpg*.xml,data/modules/set_theory/armexpg*.xml"/>
+      <property name="MIMEXPGXML" value="data/modules/attribute_classification/mimexpg*.xml,data/modules/class/mimexpg*.xml,data/modules/classification/mimexpg*.xml,data/modules/external_class/mimexpg*.xml,data/modules/plib_class_reference/mimexpg*.xml,data/modules/set_theory/mimexpg*.xml"/>
+      <property name="ARMEXPXML" value="data/modules/attribute_classification/arm.xml,data/modules/class/arm.xml,data/modules/classification/arm.xml,data/modules/external_class/arm.xml,data/modules/plib_class_reference/arm.xml,data/modules/set_theory/arm.xml"/>
+      <property name="MIMEXPXML" value="data/modules/attribute_classification/mim.xml,data/modules/class/mim.xml,data/modules/classification/mim.xml,data/modules/external_class/mim.xml,data/modules/plib_class_reference/mim.xml,data/modules/set_theory/mim.xml"/>
+      <property name="RESOURCESXML" value="data/resources/management_resources_schema/management_resources_schema.xml,data/resources/group_schema/group_schema.xml,data/resources/classification_schema/classification_schema.xml,data/resources/external_reference_schema/external_reference_schema.xml,data/resources/set_theory_schema/set_theory_schema.xml"/>
    </target>
     
    <target name="init" depends="variables">
