Added build for repository_dependencies

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.9 2002/08/14 06:47:41 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.10 2002/09/09 12:47:04 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -374,76 +374,94 @@ tar.gz format)
       <srcfileset dir="${NAVXSL}" includes="**/*.xsl"/>
       <targetfileset dir="." includes="${NAV}/*.htm*"/>
     </dependset>
+
     <style includes="${NAV}/index.xml" destdir="."
-	   extension=".htm"
+      extension=".htm"
       style="${NAVXSL}/index.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
     <style includes="${NAV}/banner.xml" destdir="."
-	   extension=".htm"
+      extension=".htm"
       style="${NAVXSL}/banner.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
     <style includes="${NAV}/introduction.xml" destdir="."
-	   extension=".htm"
+      extension=".htm"
       style="${NAVXSL}/introduction.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
     <style includes="${NAV}/ballot_modules.xml" destdir="."
-	   extension=".htm"
+      extension=".htm"
       style="${NAVXSL}/ballot_modules.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
     <style includes="${NAV}/arm_objects.xml" destdir="."
-	   extension=".htm"
+      extension=".htm"
       style="${NAVXSL}/arm_objects.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
     <style includes="${NAV}/mim_objects.xml" destdir="."
-	   extension=".htm"
+      extension=".htm"
       style="${NAVXSL}/mim_objects.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
     <style includes="${NAV}/resource_objects.xml" destdir="."
-	   extension=".htm"
+      extension=".htm"
       style="${NAVXSL}/resource_objects.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
     <style includes="${NAV}/modules_alpha.xml" destdir="."
-	   extension=".htm"
+      extension=".htm"
       style="${NAVXSL}/modules_alpha.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
     <style includes="${NAV}/modules_numbers.xml" destdir="."
-	   extension=".htm"
+      extension=".htm"
       style="${NAVXSL}/modules_numbers.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
     <style includes="${NAV}/modules_project.xml" destdir="."
-	   extension=".htm"
+      extension=".htm"
       style="${NAVXSL}/modules_project.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+
+    <style includes="${NAV}/repository_dependencies.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/repository_dependencies.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <!--
+    <style includes="${NAV}/modules_tree.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/modules_tree.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+-->
+    
   </target>
 
 
