Added new build for navigation files

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.10 2002/09/09 12:47:04 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.11 2002/09/10 11:10:15 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -389,6 +389,13 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <style includes="${NAV}/titlebar.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/titlebar.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
     <style includes="${NAV}/introduction.xml" destdir="."
       extension=".htm"
       style="${NAVXSL}/introduction.xsl">
@@ -403,6 +410,57 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <!-- Modules menu -->
+    <style includes="${NAV}/modules_alpha.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/modules_alpha.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${NAV}/modules_project.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/modules_project.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${NAV}/modules_numbers.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/modules_numbers.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${NAV}/modules_project.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/modules_project.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${NAV}/modules_project_lead.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/modules_project_lead.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${NAV}/repository_dependencies.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/repository_dependencies.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${NAV}/resource_schema_alpha.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/resource_schema_alpha.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <!-- EXPRESS menu -->
     <style includes="${NAV}/arm_objects.xml" destdir="."
       extension=".htm"
       style="${NAVXSL}/arm_objects.xsl">
@@ -424,34 +482,14 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
-    <style includes="${NAV}/modules_alpha.xml" destdir="."
+    <!-- Common resources menu -->
+    <style includes="${NAV}/resource_mappings.xml" destdir="."
       extension=".htm"
-      style="${NAVXSL}/modules_alpha.xsl">
+      style="${NAVXSL}/resource_mappings.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
-    <style includes="${NAV}/modules_numbers.xml" destdir="."
-      extension=".htm"
-      style="${NAVXSL}/modules_numbers.xsl">
-      <param name="output_type" expression="HTM"/>
-      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
-    </style>
-
-    <style includes="${NAV}/modules_project.xml" destdir="."
-      extension=".htm"
-      style="${NAVXSL}/modules_project.xsl">
-      <param name="output_type" expression="HTM"/>
-      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
-    </style>
-
-
-    <style includes="${NAV}/repository_dependencies.xml" destdir="."
-      extension=".htm"
-      style="${NAVXSL}/repository_dependencies.xsl">
-      <param name="output_type" expression="HTM"/>
-      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
-    </style>
 
     <!--
     <style includes="${NAV}/modules_tree.xml" destdir="."
