Added application protocols

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.11 2002/09/10 11:10:15 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.12 2002/09/13 06:32:20 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -403,13 +403,6 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
-    <style includes="${NAV}/ballot_modules.xml" destdir="."
-      extension=".htm"
-      style="${NAVXSL}/ballot_modules.xsl">
-      <param name="output_type" expression="HTM"/>
-      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
-    </style>
-
     <!-- Modules menu -->
     <style includes="${NAV}/modules_alpha.xml" destdir="."
       extension=".htm"
@@ -482,6 +475,14 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <!-- Application protocol menu -->
+    <style includes="${NAV}/ap_alpha.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/ap_alpha.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
     <!-- Common resources menu -->
     <style includes="${NAV}/resource_mappings.xml" destdir="."
       extension=".htm"
@@ -490,16 +491,14 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
-
-    <!--
-    <style includes="${NAV}/modules_tree.xml" destdir="."
+    <!-- Ballots menu -->
+    <style includes="${NAV}/ballot_modules.xml" destdir="."
       extension=".htm"
-      style="${NAVXSL}/modules_tree.xsl">
+      style="${NAVXSL}/ballot_modules.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
--->
-    
+
   </target>
 
 
