changed 'excludesfile' attribute in style task to 'excludes'

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.14 2002/09/17 07:47:40 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.15 2002/09/17 08:40:17 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -187,7 +187,7 @@ tar.gz format)
     <style 
       includes="${RESOURCES}/*.xml"
       destdir="." extension=".htm"
-      excludesfile="${RESOURCES}/developer.xml"
+      excludes="${RESOURCES}/developer.xml"
       style="${STYLES}/express.xsl">
       <param name="output_type" expression="HTM"/>
     </style>
