--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.15 2002/09/17 08:40:17 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.16 2002/09/19 18:11:20 joshualubell Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -204,6 +204,13 @@ tar.gz format)
     <style includes="${MODNAV}/developer.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/developer.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${MODNAV}/summary.xml" destdir="."
+	   extension=".htm"
+	   style="${NAVXSL}/summary.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
