--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.16 2002/09/19 18:11:20 joshualubell Exp $ -->
+<!-- $Id: build.xml,v 1.17 2002/09/29 11:25:44 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -432,6 +432,13 @@ tar.gz format)
     <style includes="${BALLOTS}/ballot_list.xml" 
       destdir="." extension=".htm"
       style="${BALLOTSTYLES}/ballot_list.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="stepmodhome" expression="."/>
+    </style>
+
+    <style includes="${BALLOTS}/ballot_shortnames.xml" 
+      destdir="." extension=".htm"
+      style="${BALLOTSTYLES}/ballot_shortnames.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="stepmodhome" expression="."/>
     </style>
