Added definitions view

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.17 2002/09/29 11:25:44 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.18 2002/09/30 06:35:54 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -211,6 +211,20 @@ tar.gz format)
     <style includes="${MODNAV}/summary.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/summary.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${MODNAV}/arm_descriptions.xml" destdir="."
+	   extension=".htm"
+	   style="${NAVXSL}/arm_descriptions.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${MODNAV}/mim_descriptions.xml" destdir="."
+	   extension=".htm"
+	   style="${NAVXSL}/mim_descriptions.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
@@ -524,6 +538,14 @@ tar.gz format)
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <style includes="${NAV}/definitions.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/definitions.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
 
     <style includes="${NAV}/repository_dependencies.xml" destdir="."
       extension=".htm"
