--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.18 2002/09/30 06:35:54 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.19 2002/09/30 10:30:30 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -466,7 +466,6 @@ tar.gz format)
 
   </target>
 
-
   <target name="nav" depends="init" 
     description="generate navigation indices">
     <dependset>
@@ -546,6 +545,12 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <style includes="${NAV}/keywords.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/keywords.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
 
     <style includes="${NAV}/repository_dependencies.xml" destdir="."
       extension=".htm"
